GNOME Bugzilla – Bug 704250
Doc: various fixes
Last modified: 2013-07-20 09:11:39 UTC
Various fixes to the API documentation.
Created attachment 249199 [details] [review] Improve documentation - Mention G_SOURCE_CONTINUE and G_SOURCE_REMOVE in the GSourceFunc doc; - Mention G_PARAM_READWRITE and G_PARAM_STATIC_STRINGS in the GParamFlags doc; - Fix "Since:" version for G_DEFINE_ABSTRACT_TYPE_WITH_PRIVATE; - Fix typo.
Created attachment 249200 [details] [review] GRegex: update documentation for partial matching The restrictions on partial matching no longer apply with PCRE >= 8.00. The pcrepartial manpage contains the "FORMERLY RESTRICTED PATTERNS" section: "For releases of PCRE prior to 8.00, because of the way certain internal optimizations were implemented in the pcre_exec() function, the PCRE_PARTIAL option (predecessor of PCRE_PARTIAL_SOFT) could not be used with all patterns. From release 8.00 onwards, the restrictions no longer apply, and partial matching with can be requested for any pattern."
Review of attachment 249199 [details] [review]: Looks good ::: glib/gmain.h @@ +151,3 @@ * + * Returns: %FALSE if the source should be removed. #G_SOURCE_CONTINUE and + * #G_SOURCE_REMOVE are more meaningful names for the return value. Maybe 'memorable' would be a better term here ?
Review of attachment 249200 [details] [review]: sure
Thanks for the review. I've changed meaningful -> memorable.